add styles to table and sideBar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,7 +99,6 @@ button {
 /* SideBar and CRUD section styles */
 #crud {
   display: flex;
-  justify-content: space-between;
   padding: 20px;
   background-color: #ffffff;
   border: 1px solid #ddd;
@@ -113,14 +112,14 @@ button {
 }
 
 .sectionagregar {
-  padding: 20px;
+  padding: 50px;
   background-color: #f4f4f4;
   border-radius: 5px;
   margin-bottom: 20px;
 }
 
 .sectionagregar .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .sectionagregar label {
@@ -131,7 +130,7 @@ button {
 
 .sectionagregar input,
 .sectionagregar select {
-  width: 100%;
+  width: 115%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -166,6 +165,10 @@ button {
   background-color: #218838;
 }
 
+.sectionregistros {
+  width: 100%;
+  margin: 5px;
+}
 /* Table styling */
 #bookTable {
   width: 100%;
@@ -199,4 +202,75 @@ button.delete {
 button.pdf {
   background-color: #28a745;
   padding: 5px;
+}
+
+/* Estilos para el modal */
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  overflow: auto;
+}
+
+.modal-content {
+  background-color: white;
+  margin: 15% auto;
+  padding: 20px;
+  width: 90%; /* Cambiado a 90% para pantallas más pequeñas */
+  max-width: 700px; /* Máximo ancho del modal */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.modal input,
+.modal select,
+.modal textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 5px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Estilos para los botones */
+button,
+input[type="submit"] {
+  padding: 10px 10px;
+  background-color: #4caf50; /* Color por defecto */
+  color: white;
+  border: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s; /* Transición suave */
+}
+
+button:hover,
+input[type="submit"]:hover {
+  background-color: #45a049; /* Color al pasar el mouse */
+}
+
+/* Espaciado y alineación */
+input[type="text"]:focus,
+input[type="date"]:focus,
+select:focus {
+  border-color: #4caf50;
+  outline: none;
 }
